--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -784,6 +784,7 @@ pre code {
 .container {
   padding-right: 15px;
   padding-left: 15px;
+  padding-bottom: 20px;
   margin-right: auto;
   margin-left: auto;
 }
