--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,11 +4,43 @@
 <head>
 	<title>My HCI Friends</title>	
 	<meta charset="utf-8">
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<!-- JavaScript -->
+	<script src="js/jquery-1.11.0.js"></script>
+	<script src="js/bootstrap.js"></script>
+	<script src="js/hci-friends.js"></script>
+
+	<!-- CSS -->
+	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/bootstrap-theme.css" rel="stylesheet">
+	<link href="css/hci-friends.css" rel="stylesheet">
 </head>
 
-<body>
+<div class="container">
+	<body>
 	<h1>My HCI Friends</h1>
+
+	<div class="friend">
+		<img class="img-responsive" src="http://lorempixel.com/500/500/people" alt="Test Image">
+		<a href="#" class="friend-name">
+			<h3>Fake Friend</h3>
+		</a>
+		<p>All my friends are imaginary.</p>
+	</div>
+
+	{{#each friends}}
+		<div class="friend">
+			<img class="img-responsive" src="{{imageURL}}" alt="Test Image">
+			<a href="#" class="friend-name">
+				<h3>{{name}}</h3>
+			</a>
+			<p>{{description}}</p>
+			<hr>
+		</div>
+
+	{{/each}}
+
 
 	<form id="addFriendForm" role="form" method="get" action="/add">
 		<h3>Add a friend</h3>
@@ -23,4 +55,6 @@
 	    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
 	</form>
 </body>
+</div>
+
 </html>
